crates/mecojoni-core/tests/fixtures/invalid/body-zero-weight.meco
---
meco: 1
module: invalid
---

# greeting
- [0] Hello.
